--- a/src/app/adminpanel/adminpanel.component.html
+++ b/src/app/adminpanel/adminpanel.component.html
@@ -1,58 +1,63 @@
-<div class="navbar navbar-expand-lg">
+<div class="container">
 
-    <a href="#" class="navbar-brand" >Status: <a *ngIf = "usrnStr" style="color: green">{{usrnStr}} is active</a></a>
-    
-    <div class="collapse navbar-collapse">
-    
-    <ul class="navbar-nav navbar ml-auto">
+    <nav class="navbar navbar-expand-md navbar-light">
 
-        <li class="nav-item">
+        <a href="#" class="navbar-brand">Status: <a *ngIf="usrnStr" style="color: green">{{usrnStr}} is active</a></a>
 
-            <img [src]=imgs1 width="37px"/>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
+            aria-controls="navMenu" aria-expanded="false" aria-lable="conteorls"><span
+                class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse justify-content-end " id="navMenu">
 
-           </li>
+            <ul class="navbar-nav navbar ml-auto">
 
-            <li class="nav-item">
+                <li class="nav-item">
 
-                <a routerLink="/employees" class="nav-link" class="nav-link">Add employess</a>
-
-
-            </li>
-
-            <li class="nav-item">
-
-                <img [src]=imgs2 width="37px"/>
-    
-    
-            </li>
-            
-
-            <li class="nav-item">
-
-                <a routerLink="/employeeslist" class="nav-link">List employess</a>
+                    <img [src]=imgs1 width="37px" />
 
 
-            </li>
+                </li>
 
-            <li class="nav-item">
+                <li class="nav-item">
 
-                <img [src]=imgs3 width="37px"/>
-    
-    
-            </li>
+                    <a routerLink="/employees" class="nav-link" class="nav-link">Add employess</a>
 
 
-            <li class="nav-item">
+                </li>
 
-                <button type="button" (click) = "logOut()" class="btn btn-link">Logout</button>
+                <li class="nav-item">
+
+                    <img [src]=imgs2 width="37px" />
 
 
-            </li>
+                </li>
 
-    </ul>
-    
-    </div>
-    
+
+                <li class="nav-item">
+
+                    <a routerLink="/employeeslist" class="nav-link">List employess</a>
+
+
+                </li>
+
+                <li class="nav-item">
+
+                    <img [src]=imgs3 width="37px" />
+
+
+                </li>
+
+
+                <li class="nav-item">
+
+                    <button type="button" (click)="logOut()" class="btn btn-link"><span id="color">Logout</span></button>
+
+
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 </div>
-
